# ai_meeting_manager_free

./: .env.example  .gitignore  AUDIT_RECOMMENDATIONS.md  BACKEND_MVP_TASKS.md  CONTRIBUTING.md  CURRENT_STATUS.md  DISTRIBUTION_MONETIZATION_BACKLOG.md  LICENSE  ML_PLUGINS_SPEC.md  MONETIZATION_COMPATIBILITY_AUDIT.md  NEW_PLUGINS_SPEC.md  PERF_RESPONSIVENESS_BACKLOG.md  PLUGIN_ARCHITECTURE_EXECUTION_BACKLOG.md  PLUGIN_CATALOG_AND_ENTITLEMENT_API.md  PLUGIN_DISTRIBUTION_AND_MONETIZATION.md  PLUGIN_SETUP_AND_CATALOG_UX.md  README.md  SECURITY.md  SERVER_BACKEND_PREPARATION.md  TRADEMARKS.md  WEBSITE_PRODUCT_PAGE_COPY_RU.md  plugins.json  pyproject.toml  run_ui.py
config/: content.json  installed_plugins.json  plugin_activation.json  plugin_distribution.json  plugin_entitlements.json  plugins.toml  secrets.template.toml
config/management/: management.sqlite
config/prompts/: meeting_summary_prompt.json
plugins/: plugin_developer_requirements.md
plugins/reference/: __init__.py  openai_summary.py  openai_whisper.py
plugins/schemas/: plugin_manifest.schema.json
plugins/search/: search_index.py
plugins/text_processing/: utils.py
plugins/ui/: __init__.py
releases/core_free/: BACKLOG.md  FIRST_RUN.md  INSTALLER_READINESS.md  Launch-Core-Free.cmd  Launch-Core-Free.ps1  bundle_manifest.json  manifest.json  run_ui.py
scripts/: analyze_output_edits.py  batch_edit_variants.py  bootstrap_dev.py  build_llama_windows.ps1  check_ml_env.py  cleanup_output_asr_debug.py  compare_whisper_basic_vs_advanced.py  eval_edit_outputs.py  lint_provider_names.py  migrate_secrets_txt.py  profile_ui_responsiveness.py  rebuild_index.py  run_tests.ps1  run_tests_local_temp.ps1  run_text_processing_sample.py  update_brand_assets.py
server_contracts/: catalog.schema.json  entitlements.schema.json  openapi.plugin_platform.yaml  package_manifest.schema.json  publisher_trust_policy.schema.json
server_contracts/examples/: catalog.example.json  entitlements.example.json  package_manifest.example.json  publisher_trust_policy.example.json
src/aimn/: cli.py
tests/: plugin_fixture_helpers.py
tests/integration/: test_ai_plugins_live.py  test_architecture_compliance.py  test_architecture_smoke.py  test_pipeline.py  test_pipeline_artifacts_real.py  (+3 more)
(+457 files in other folders)
